...
                                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="20" id="5vS-lf-pbk"/>
                                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="43" id="9Ys-5w-BZg"/>
                                                    <constraint firstAttribute="height" constant="20" id="ZPy-53-q7o"/>
                                                    <constraint firstAttribute="width" constant="43" id="jAx-DH-IyY"/>
                                                </constraints>
                                            </imageView>
                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jWk-WB-mCK">
                                                <rect key="frame" x="59" y="10" width="245" height="30"/>
                                                <color key="tintColor" red="0.90196078430000004" green="0.058823529409999999" blue="0.1058823529" alpha="1" colorSpace="calibratedRGB"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="30" id="hS0-NK-W5Z"/>
                                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="n7B-dP-YXB"/>
                                                </constraints>
...
                                <rect key="frame" x="16" y="162" width="288" height="55"/>
                                <color key="backgroundColor" red="0.90196078430000004" green="0.058823529409999999" blue="0.1058823529" alpha="1" colorSpace="calibratedRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="55" id="7c3-Kj-PX7"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
                                <state key="normal" title="SIGN IN">
                                    <color key="titleColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                        <real key="value" value="3"/>
                                    </userDefinedRuntimeAttribute>
...
