...
    
    static func areStringNotEmpty (strings:[String], vc:UIViewController, showAlert:Bool) ->Bool{
        for string:String in strings {
            if string.isEmpty{
                if showAlert{
                    let alertController = UIAlertController(title: NSLocalizedString("localized_error",comment:""), message: NSLocalizedString("localized_empty_fields",comment:""), preferredStyle: .Alert)
                    let OKAction = UIAlertAction(title: "OK", style: .Default) { (action:UIAlertAction!) in
                        
                    }
                    alertController.addAction(OKAction)
                    vc.presentViewController(alertController, animated: true, completion:nil)
                }
                return false
...
